--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <head>
     <meta charset="utf-8">
     <title>Republic Polytechnic - Material Innovation Hub</title>
-    <link rel="stylesheet" href="pannellum.css"/>
-    <link rel="stylesheet" href="custom-hotspot.css"/>
-    <script type="text/javascript" src="pannellum.js"></script>
-    <script type="text/javascript" src="custom-hotspot.js"></script>
+    <link rel="stylesheet" href="css/pannellum.css"/>
+    <link rel="stylesheet" href="css/custom-hotspot.css"/>
+    <script type="text/javascript" src="js/pannellum.js"></script>
+    <script type="text/javascript" src="js/custom-hotspot.js"></script>
 
     </head>
 <body>
