removed by in author

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@ viewer = pannellum.viewer('panorama', ﻿{
         "autoLoad": true,
         "sceneFadeDuration": 1000,
         "horizonRoll": 2,
-        "hfov": 120
+        "hfov": 120,
+        "strings": {bylineLabel:"%s"}
     },
     
     "scenes": {
