--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 // Create viewer
 viewer = pannellum.viewer('panorama', ﻿{
     "default": {
-        "author": "Republic Polytechnic - Material Innovation Hub",
+        "author": "Republic Polytechnic - Materials Innovation Hub",
         "firstScene": "entrance",
         "autoLoad": true,
         "sceneFadeDuration": 1000,
@@ -65,7 +65,7 @@ viewer = pannellum.viewer('panorama', ﻿{
                     "yaw": 85,
                     "targetYaw": 80,
                     "type": "scene",
-                    "text": "Robotic Arm",
+                    "text": "Robotic Arm System",
                     "sceneId": "robot"
                 },
                 {
@@ -162,7 +162,7 @@ viewer = pannellum.viewer('panorama', ﻿{
                     "yaw": 50,
                     "type": "info",
                     "createTooltipFunc": hotspot,
-                    "createTooltipArgs": "<b>Eddy Current scanning equipment</b><br/>Non-destructive testing used on partially ferromagnetic materials such as nickel alloys, duplex alloys, and thin-ferromagnetic materials such as ferritic chromium molybdenum stainless steel.",
+                    "createTooltipArgs": "<b>Eddy Current Scanning Equipment</b><br/>Non-destructive testing used on partially ferromagnetic materials such as nickel alloys, duplex alloys, and thin-ferromagnetic materials such as ferritic chromium molybdenum stainless steel.",
                 }
             ]
         },
@@ -193,7 +193,7 @@ viewer = pannellum.viewer('panorama', ﻿{
         },
 
         "robot": {
-            "title": "Robotic Arm",
+            "title": "Robotic Arm System",
             "panorama": "360/robot.jpg",
             "yaw": 80,
             "hotSpots": [
@@ -225,7 +225,7 @@ viewer = pannellum.viewer('panorama', ﻿{
                     "pitch": 0,
                     "yaw": -80,
                     "type": "scene",
-                    "text": "Hot Works",
+                    "text": "Polymer Processing Area",
                     "sceneId": "hotwork1"
                 },
                 {
@@ -287,7 +287,7 @@ viewer = pannellum.viewer('panorama', ﻿{
         },
 
         "hotwork1": {
-            "title": "Hot Works",
+            "title": "Polymer Processing Area",
             "panorama": "360/hotwork1.jpg",
             "yaw": 80,
             "pitch": -10,
@@ -332,7 +332,7 @@ viewer = pannellum.viewer('panorama', ﻿{
         },
 
         "hotwork2": {
-            "title": "Hot Works",
+            "title": "Polymer Processing Area",
             "panorama": "360/hotwork2.jpg",
             "yaw": -20,
             "hotSpots": [
