removed brands and eddy current

--- a/index.html
+++ b/index.html
@@ -127,43 +127,43 @@ viewer = pannellum.viewer('panorama', ﻿{
                     "yaw": 180,
                     "type": "info",
                     "createTooltipFunc": hotspot,
-                    "createTooltipArgs": "<b>Ultimaker 2+</b><br/>FDM printer of a build volume of up to 223 x 223 x 305 mm and a single head extruder.",
+                    "createTooltipArgs": "<b>FDM Printer</b><br/>Build volume of up to 223 x 223 x 305 mm and a single head extruder.",
                 },
                 {
                     "pitch": -30,
                     "yaw": 180,
                     "type": "info",
                     "createTooltipFunc": hotspot,
-                    "createTooltipArgs": "<b>FlashForge Dreamer</b><br/>FDM printer of a build volume of up to 230 x 150 x 140mm and a dual head extruder.",
+                    "createTooltipArgs": "<b>FDM Printer</b><br/>Build volume of up to 230 x 150 x 140mm and a dual head extruder.",
                 },
                 {
                     "pitch": 8,
                     "yaw": 180,
                     "type": "info",
                     "createTooltipFunc": hotspot,
-                    "createTooltipArgs": "<b>Rapide 100 Lite</b><br/>FDM printer of a build volume of 100 x 100 x 100mm and a single head extruder.",
+                    "createTooltipArgs": "<b>FDM Printer</b><br/>Build volume of 100 x 100 x 100mm and a single head extruder.",
                 },
                 {
                     "pitch": -18,
                     "yaw": -133,
                     "type": "info",
                     "createTooltipFunc": hotspot,
-                    "createTooltipArgs": "<b>Big Builder Dual Feed</b><br/>FDM printer of a build volume of 220x210x664mm mm and a dual head extruder. It can produce very beautiful high resolution prints with all sorts of gradients and color shifting throughout the print.",
+                    "createTooltipArgs": "<b>FDM Printer</b><br/>Build volume of 220x210x664mm mm and a dual head extruder. It can produce very beautiful high resolution prints with all sorts of gradients and color shifting throughout the print.",
                 },
                 {
                     "pitch": -10,
                     "yaw": 126,
                     "type": "info",
                     "createTooltipFunc": hotspot,
-                    "createTooltipArgs": "<b>X7 Markforged Composite 3D Printer</b><br/>Top-of-the-line industrial 3D printer featuring a dual nozzle print system that supports continuous carbon fiber and Kevlar reinforcement.",
-                },
+                    "createTooltipArgs": "<b>Composite 3D Printer</b><br/>Top-of-the-line industrial 3D printer featuring a dual nozzle print system that supports continuous carbon fiber and Kevlar reinforcement.",
+                }/*,
                 {
                     "pitch": -10,
                     "yaw": 50,
                     "type": "info",
                     "createTooltipFunc": hotspot,
                     "createTooltipArgs": "<b>Eddy Current Scanning Equipment</b><br/>Non-destructive testing used on partially ferromagnetic materials such as nickel alloys, duplex alloys, and thin-ferromagnetic materials such as ferritic chromium molybdenum stainless steel.",
-                }
+                }*/
             ]
         },
 
@@ -274,7 +274,7 @@ viewer = pannellum.viewer('panorama', ﻿{
                     "yaw": 52,
                     "type": "info",
                     "createTooltipFunc": hotspot,
-                    "createTooltipArgs": "<b>DWS SLA System</b><br/>Laser stereolithography technology of DWS turns a large variety of materials into solid: acrylate resin, ABS, polypropylene, rigid opaque, transparent, rubber, castable wax and ceramic.",
+                    "createTooltipArgs": "<b>SLA System</b><br/>Laser stereolithography technology of DWS turns a large variety of materials into solid: acrylate resin, ABS, polypropylene, rigid opaque, transparent, rubber, castable wax and ceramic.",
                 },
                 {
                     "pitch": -20,
@@ -312,21 +312,21 @@ viewer = pannellum.viewer('panorama', ﻿{
                     "yaw": -176,
                     "type": "info",
                     "createTooltipFunc": hotspot,
-                    "createTooltipArgs": "<b>Thermo Scientific HAAKE Minijet II</b><br/>Provides efficient sample preparation for testing mechanical properties.",
+                    "createTooltipArgs": "<b>Injection Molding</b><br/>Provides efficient sample preparation for testing mechanical properties.",
                 },
                 {
                     "pitch": -15,
                     "yaw": 5,
                     "type": "info",
                     "createTooltipFunc": hotspot,
-                    "createTooltipArgs": "<b>Thermo Scientific HAAKE PolyLab OS System - Twin Screw Extruder</b><br/>Capable of compounding polymers with additives, reinforcing fibres and fillers.",
+                    "createTooltipArgs": "<b>Twin Screw Extruder</b><br/>Capable of compounding polymers with additives, reinforcing fibres and fillers.",
                 },
                 {
                     "pitch": -6,
                     "yaw": 120,
                     "type": "info",
                     "createTooltipFunc": hotspot,
-                    "createTooltipArgs": "<b>Thermo Scientific HAAKE PolyLab QC (Hot Melt Mixer)</b><br/>Focused on batch testing of many highly viscous substances.",
+                    "createTooltipArgs": "<b>Hot Melt Mixer</b><br/>Focused on batch testing of many highly viscous substances.",
                 }
             ]
         },
@@ -357,21 +357,21 @@ viewer = pannellum.viewer('panorama', ﻿{
                     "yaw": -4,
                     "type": "info",
                     "createTooltipFunc": hotspot,
-                    "createTooltipArgs": "<b>Carver Hot Press System</b><br/>Precise and potentially rapid process for producing high quality composite parts in a wide range of volumes.",
+                    "createTooltipArgs": "<b>Compression Molding</b><br/>Precise and potentially rapid process for producing high quality composite parts in a wide range of volumes.",
                 },
                 {
                     "pitch": -2,
                     "yaw": 79,
                     "type": "info",
                     "createTooltipFunc": hotspot,
-                    "createTooltipArgs": "<b>Thermo Scientific HAAKE PolyLab OS System - Single Screw Extruder</b><br/>Used to form a plastic product into the required shape.",
+                    "createTooltipArgs": "<b>Single Screw Extruder</b><br/>Used to form a plastic product into the required shape.",
                 },
                 {
                     "pitch": -15,
                     "yaw": 68,
                     "type": "info",
                     "createTooltipFunc": hotspot,
-                    "createTooltipArgs": "<b>Thermo Scientific HAAKE  PolyLab OS System  - Measuring Mixer</b><br/>State-of-the-art measuring mixer that is focused on the specific needs in research and development.",
+                    "createTooltipArgs": "<b>Measuring Mixer</b><br/>State-of-the-art measuring mixer that is focused on the specific needs in research and development.",
                 }
             ]
         }
