removed DWS term

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ viewer = pannellum.viewer('panorama', ﻿{
                     "yaw": 52,
                     "type": "info",
                     "createTooltipFunc": hotspot,
-                    "createTooltipArgs": "<b>SLA System</b><br/>Laser stereolithography technology of DWS turns a large variety of materials into solid: acrylate resin, ABS, polypropylene, rigid opaque, transparent, rubber, castable wax and ceramic.",
+                    "createTooltipArgs": "<b>SLA System</b><br/>Laser stereolithography technology turns a large variety of materials into solid: acrylate resin, ABS, polypropylene, rigid opaque, transparent, rubber, castable wax and ceramic.",
                 },
                 {
                     "pitch": -20,
